updated index file

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 
       <div style="height: 10px;"> </div>
 
-      <h3>welcome to AWS Java Web Project</h3>
+      <h3>Hello! Welcome to AWS Java Web Project</h3>
       <p>
       Welcome to your new AWS Java Web Project! This project template gives you
       basic a starting point for creating a web application on AWS.
